--- a/Submission1/Analysis/homework4pdf.qmd
+++ b/Submission1/Analysis/homework4pdf.qmd
@@ -18,9 +18,19 @@ pacman::p_load(tidyverse, ggplot2, dplyr, lubridate, readr, readxl, hrbrthemes, 
 
 ```
 
-```{r}
-QUESTION 1
+\newpage
 
+# Question 1
+```{r}
+final.data<-write_rds(final.data,"data/output/final_ma_data.rds")
+contract.service.area <- read_rds("/Users/alekhyapidugu/Desktop/homework4/data/output/contract_service_area.rds")
+star.ratings <- read_rds("/Users/alekhyapidugu/Desktop/homework4/data/output/star_ratings.rds")
+ma.penetration.data <- read_rds("/Users/alekhyapidugu/Desktop/homework4/data/output/ma_penetration.rds")
+plan.premiums <- read_rds("/Users/alekhyapidugu/Desktop/homework4/data/output/plan_premiums.rds")
+risk.rebate.final <- read_rds("/Users/alekhyapidugu/Desktop/homework4/data/output/risk_rebate.rds")
+benchmark.final <- read_rds("/Users/alekhyapidugu/Desktop/homework4/data/output/ma_benchmark.rds") %>%
+  mutate(ssa=as.double(ssa))
+ffs.costs.final <- read_rds("/Users/alekhyapidugu/Desktop/homework4/data/output/ffs_costs.rds")
 # Filter out SNPs, 800-series plans, and prescription drug only plans
 filtered_data <- final.data %>%
   filter(!grepl("SNP", plan_name, ignore.case = TRUE) & 
@@ -43,8 +53,18 @@ print(plot)
 
 Obviously, something is clearly wrong. I think I do not have the right variables for the Part c. But I thought it was partc_score...?
 
-QUESTION 2
-```{r results="hide", echo=FALSE, message=FALSE}
+\newpage
+# Question 2
+```{r echo=FALSE, message=FALSE}
+final.data<-write_rds(final.data,"data/output/final_ma_data.rds")
+contract.service.area <- read_rds("/Users/alekhyapidugu/Desktop/homework4/data/output/contract_service_area.rds")
+star.ratings <- read_rds("/Users/alekhyapidugu/Desktop/homework4/data/output/star_ratings.rds")
+ma.penetration.data <- read_rds("/Users/alekhyapidugu/Desktop/homework4/data/output/ma_penetration.rds")
+plan.premiums <- read_rds("/Users/alekhyapidugu/Desktop/homework4/data/output/plan_premiums.rds")
+risk.rebate.final <- read_rds("/Users/alekhyapidugu/Desktop/homework4/data/output/risk_rebate.rds")
+benchmark.final <- read_rds("/Users/alekhyapidugu/Desktop/homework4/data/output/ma_benchmark.rds") %>%
+  mutate(ssa=as.double(ssa))
+ffs.costs.final <- read_rds("/Users/alekhyapidugu/Desktop/homework4/data/output/ffs_costs.rds")
 # Filter the data for the years 2010, 2012, and 2015
 filtered_data <- final.data %>%
   filter(year %in% c(2010, 2012, 2015))
